Fix Kirigami Application (Qt6) template

Without that it won't build: main.cpp and won't open About.qml.

BUG:494478